# Vela

./: .env.example  .gitignore  IMPLEMENTATION.md  README.md  pyproject.toml  requirements.txt  test_vela_backend.db
agent/: graph.ipynb  graph.py  main.py  persona.py  prompt.py  prompt_history.py  router.py  state.py
browser-automation/: architecture.md  browser-automation.md  client-webview.md  dom-minification.md  langsmith-tracing.md  telemetry-and-evaluation.md
cron/: consolidate.py
db/: client.py  models.py  schema.sql  session.py  supabase.py
docs/superpowers/plans/: 2026-07-01-discord-gateway.md  2026-07-01-vela-implementation.md  2026-07-02-consolidation-module.md  2026-07-02-docstrings.md  2026-07-02-fallback-llm-providers.md  2026-07-02-long-term-memory.md  2026-07-02-short-term-memory.md  2026-07-02-sqlalchemy-connection.md  2026-07-02-tool-based-memory.md  2026-07-03-db-vector-size-512.md  2026-07-03-telegram-gateway-execution-modes.md
docs/superpowers/specs/: 2026-07-01-discord-gateway-design.md  2026-07-01-vela-design-spec.md  2026-07-02-consolidation-module-design.md  2026-07-02-docstrings-design.md  2026-07-02-fallback-llm-providers-design.md  (+7 more)
gateway/: carbonvoice.py  discord.py  telegram.py
ideas/: browser-automation and cron setup ideas.md  implementation of browser automation.md  selection and implementation for browser automation.md
scratch/: check_db.py  import_history.py
skills/: __init__.py  base.py  brainstorming.py  coding.py  grill_me.py  mermaid_graphs.py  research.py
tests/: conftest.py  test_api.py  test_carbonvoice.py  test_client.py  test_cron.py  test_db.py  test_discord.py  test_graph.py  test_llm_fallback.py  test_oauth.py  test_session.py  test_telegram.py  test_tools.py
tools/: __init__.py  code_exec.py  memory.py  status_update.py  web_search.py  webview_browser.py
utils/: google_drive.py  helpers.py  llm.py  logger.py
