[project]
name = "vela"
version = "0.1.0"
description = "Vela Supervisor Agent Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "langgraph>=0.0.30",
    "langchain-core>=0.1.40",
    "langchain-google-genai>=1.0.2",
    "supabase>=2.4.0",
    "python-telegram-bot>=21.0.1",
    "discord.py>=2.3.2",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.122.0",
    "httpx>=0.27.0",
    "pygithub>=2.2.0",
    "sqlalchemy>=2.0.51",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
]
